--- a/dev/htmlincs/-main.html
+++ b/dev/htmlincs/-main.html
@@ -1,10 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<section class="main">
+	<div class="main-container">
+		<div class="main-text main-text-up">
+			<h1>Can User Experience Be Beautiful? An Analysis Of Navigation In
+			Portfolio Websites</h1>
+			<p>This is a different take on Responsive Web design. elephant in the room; that is, how we can rely on media queries and <a href="#">breakpoints</a> without any concern for devices.</p>
+			<p>Let’s start our journey by looking at the online tools such as Responsive Design Testing, Responsive.is, Responsinator and BriCSS.
+			This article discusses how we can better.<span class="more">more>></span></p>
+		</div>
+		<div class="main-video">
+			<video controls="controls" poster="images/1.jpg">
+				<source src="../video/1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+				</video>
+		</div>
+		<div class="main-text main-text-down">
+			<h1>Can User Experience Be Beautiful? An Analysis Of Navigation In
+			Portfolio Websites</h1>
+			<p>This is a different take on Responsive Web design. elephant in the room; that is, how we can rely on media queries and <a href="#">breakpoints</a> without any concern for devices.</p>
+			<p>Let’s start our journey by looking at the online tools such as Responsive Design Testing, Responsive.is, Responsinator and BriCSS.
+			This article discusses how we can better.<span class="more">more>></span></p>
+		</div>
+	</div>
+	<div class="footer-main">
+		<div class="left content-main">
+			<img src="images/1.png">
+			<h2>MARKETING <span class="green">plans</span></h2>
+			<p>Lorem ipsum dolor sit amet, consectuer adipiscing elit. Aenean commodo.</p>
+			<span class="more">more</span>
+		</div>
+		<div class="center content-main">
+			<img src="images/2.png">
+			<h2>CREATION <span class="green">lab</span></h2>
+			<p>Lorem ipsum dolor sit amet, constetuer adipiscing elit. Aenean commodo.</p>
+			<span class="more">more</span>
+		</div>
+		<div class="right content-main">
+			<img src="images/3.png">
+			<h2>RESPONSIVE <span class="green">WEB</span></h2>
+			<p>Lorem ipsum dolor sit amet, constetuer adipiscing elit. Aenean commodo.</p>
+			<span class="more">more</span>
+		</div>
 
-</body>
-</html>
+	</div>
+</section>
